--- a/result_analyse.ipynb
+++ b/result_analyse.ipynb
@@ -3122,7 +3122,7 @@
     "    # for model in [\"bert\", \"codebert\", \"vulcnn\", \"astgru\", \"LSTM\", \"GRU\", \"TextCNN\", \"devign\", \"reveal\", \"vulroberta\", \"code2vec\"]:\n",
     "    # for model in [\"bert\", \"codebert\", \"vulcnn\", \"astgru\", \"LSTM\", \"GRU\", \"TextCNN\", \"vulroberta\", \"code2vec\"]:\n",
     "        for dataset in [\"sub_original_dataset\"]:\n",
-    "            root = \"/root/data/qm_data/issta2022/\" + resu+ \"/\" + model + \"/\" + dataset + \"/\"\n",
+    "            root = \"./\" + resu+ \"/\" + model + \"/\" + dataset + \"/\"\n",
     "            best_result_dict = {}\n",
     "            for dir in [\"ffmpeg\", \"qemu\", \"reveal\"]:\n",
     "                print(\"===== \", model, \" || \", dir, \" =====\")\n",
@@ -5187,7 +5187,7 @@
     "import pandas\n",
     "# pandas.set_option('display.max_colwidth', 60)\n",
     "# 读取最终结果的\n",
-    "pd = load_data(\"/root/data/qm_data/issta2022/result/all_result.pkl\")\n",
+    "pd = load_data(\"./result/all_result.pkl\")\n",
     "# pd.TextCNN_ffmpeg[\"ori_ffmpeg\"]\n",
     "# pd.TextCNN_ffmpeg[\"ori_ffmpeg\"].keys()\n",
     "# pd.TextCNN_ffmpeg[\"ori_ffmpeg\"][\"report_dict\"][\"accuracy\"]\n",
@@ -6206,7 +6206,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import pandas\n",
-    "pd = load_data(\"/root/data/qm_data/issta2022/result/all_result.pkl\")\n",
+    "pd = load_data(\"./result/all_result.pkl\")\n",
     "final_all_dict = {}\n",
     "# for dataset_name in [\"ffmpeg\", \"qemu\"]:\n",
     "for dataset_name in [\"ffmpeg\", \"qemu\", \"reveal\"]:\n",
